dobbelsteen met nummer

--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
 <body>
     <div id="Header">
     <h1>dobbelsteen</h1>
-    <h4>Gooi de dobbelsteen</h4>
-    <section>
+    <h4>Gooi de dobbelstenen</h4>
+
+<section>
     <div id="Knop">
-        <label for="Rondjes">1</label>
+        <label for="een">01</label>
+        <label for="twee">02</label>
+        <label for="drie">03</label>
+        <label for="vier">04</label>
+        <label for="vijf">05</label>
+        <label for="zes">06</label>
     </div>
-    <button onclick="Toss()">Gooi</button>
+
 </section>
+<br>
+<button onclick="Toss()">Gooi</button>
     </div>
 </body>
 </html>
